Ultimo commit(creo)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         function agregar(){
             let real = "no real";
             if(document.getElementById("checkDefault").checked){
-                real = "real";
+                real = "Real";
             }
             var lista='<tr>'+'<td scope="row">'+document.getElementById("nombre").value+"</td>"
             +"<td>"+real+"</td>"+
